# BER-TLV-Challenge

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  btlvConfig.h.in
.github/: PULL_REQUEST_TEMPLATE
doc/: Doxyfile  main_page.md
examples/: CMakeLists.txt
examples/CustomNavigator/: CMakeLists.txt  main.c
examples/CustomPrintFunction/: CMakeLists.txt  main.c
examples/DefaultPrintFunction/: CMakeLists.txt  main.c
examples/StatisticsNavigator/: CMakeLists.txt  main.c
hooks/: pre-push
include/: bertlv.h  tlvparser.h
include/architecture/: typehandler.h
include/io/: printinghelper.h
scripts/: checkFormat.sh  formatCodeFiles.sh
src/: CMakeLists.txt  bertlv.c  tlvparser.c
src/architecture/: typehandler.c
src/include/: bertlv.h
src/include/io/: printinghelper.h
src/io/: printinghelper.c
tests/: CMakeLists.txt  btlv_nullptr_tests.c  btlv_parsing_tests.c  btlv_printing_tests.c  btlv_test_helpers.c  btlv_test_helpers.h  btlv_test_setups.c  btlv_test_setups.h  btlv_tests.h  btlv_trytocrash_tests.c  btlv_version_tests.c  main.c  testsdefs.h
tests/btlv_suite/: btlv_tests.c
